filter bar, register, login added

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 
 /* Global Styles */
 :root {
@@ -17,7 +17,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #fff;
@@ -286,7 +286,7 @@ img {
 .badge-pink,
 .alert-pink {
   background: #f500a375;
-  color: #fff
+  color: #fff;
 }
 
 .btn:hover {
@@ -313,10 +313,10 @@ input {
   color: #888;
 }
 
-input[type='text'],
-input[type='email'],
-input[type='password'],
-input[type='date'],
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="date"],
 select,
 textarea {
   display: block;
@@ -324,9 +324,13 @@ textarea {
   padding: 0.4rem;
   font-size: 1rem;
   border: 1px solid #ccc;
+  position: relative;
+  border-radius: 5px;
+  padding: 10px;
+  transition: 0.3s ease-in;
 }
 
-input[type='submit'],
+input[type="submit"],
 button {
   font: inherit;
 }
